# volVIC

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: Makefile  index.html  search.js  volVIC.html
docs/api_txt/: doc.txt  volVIC.C1_triplets.txt  volVIC.Mesh.txt  volVIC.Problem.txt  volVIC.image_utils.txt  volVIC.integration_space_image.txt  volVIC.marching_cubes.txt  volVIC.membrane_stiffness.txt  volVIC.solve.txt  volVIC.txt  volVIC.virtual_image.txt  volVIC.virtual_image_correlation_energy.txt
docs/volVIC/: C1_triplets.html  Mesh.html  Problem.html  image_utils.html  integration_space_image.html  marching_cubes.html  membrane_stiffness.html  solve.html  virtual_image.html  virtual_image_correlation_energy.html
exemples/: blob_fit.py  mono_patch_cylinder_fit.py
exemples/blob_fit/: blob_fit.py
exemples/geo_to_twin_one_cell/: compute_response.py  fit_tomography.py  make_figs.py  make_geo.py
src/volVIC/: C1_triplets.py  Mesh.py  Problem.py  __init__.py  image_utils.py  integration_space_image.py  marching_cubes.py  membrane_stiffness.py  solve.py  virtual_image.py  virtual_image_correlation_energy.py
volVIC/: C1_triplets.py  Mesh.py  Problem.py  VirtualImageCorrelationEnergyElem.py  find_displ.py  find_fg_bg.py  integration_space_image.py  marching_cubes.py  membrane_stiffness.py  solve.py  virtual_image.py
